:sparkles: create rag story specific answer type

--- a/bot/admin/web/src/app/bot/story/story.component.html
+++ b/bot/admin/web/src/app/bot/story/story.component.html
@@ -39,6 +39,11 @@
               nbTooltip="Script Story"
               icon="code"
             ></nb-icon>
+            <nb-icon
+              *ngIf="story.isRagAnswer()"
+              nbTooltip="Rag Story"
+              icon="question-mark-circle-outline"
+            ></nb-icon>
             <span
               *ngIf="!storyNode"
               nbTooltip="Story name"
