[DERCBOT-650 | DERCBOT-685] debug on test view (#265)
[DERCBOT-650 | DERCBOT-685] debug on test view

--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -112,3 +112,9 @@ nb-icon[pack='material-icons'] {
     flex-wrap: wrap;
   }
 }
+
+.cdk-global-overlay-wrapper nb-dialog-container nb-card {
+  max-width: 95vw;
+  max-height: 95vh;
+  margin: 0;
+}
